// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ui should draw the UI: snapshot-draw-ui0 1`] = `
<div
  class="box not-selected selectable draggable resizeable-nw resizeable-ne resizeable-sw resizeable-se isDropZone"
  style="position: absolute; top: 100px; left: 100px; width: 98px; height: 98px; border-width: 1px;"
>
  
      
  <div
    class="handle handle-nw"
  />
  
      
  <div
    class="handle handle-ne"
  />
  
      
  <div
    class="handle handle-sw"
  />
  
      
  <div
    class="handle handle-se"
  />
  
    
</div>
`;

exports[`Ui should draw the UI: snapshot-draw-ui0 2`] = `
<div
  class="box not-selected selectable draggable resizeable-nw resizeable-ne resizeable-sw resizeable-se isDropZone"
  style="position: absolute; top: 100px; left: 100px; width: 98px; height: 98px; border-width: 1px;"
>
  
      
  <div
    class="handle handle-nw"
  />
  
      
  <div
    class="handle handle-ne"
  />
  
      
  <div
    class="handle handle-sw"
  />
  
      
  <div
    class="handle handle-se"
  />
  
    
</div>
`;

exports[`Ui should draw the UI: snapshot-draw-ui1 1`] = `
<div
  class="box not-selected selectable draggable resizeable-nw resizeable-ne resizeable-sw resizeable-se isDropZone"
  style="position: absolute; top: 100px; left: 100px; width: 98px; height: 98px; border-width: 1px;"
>
  
      
  <div
    class="handle handle-nw"
  />
  
      
  <div
    class="handle handle-ne"
  />
  
      
  <div
    class="handle handle-sw"
  />
  
      
  <div
    class="handle handle-se"
  />
  
    
</div>
`;

exports[`Ui should draw the UI: snapshot-draw-ui1 2`] = `
<div
  class="box not-selected selectable draggable resizeable-nw resizeable-ne resizeable-sw resizeable-se isDropZone"
  style="position: absolute; top: 100px; left: 100px; width: 98px; height: 98px; border-width: 1px;"
>
  
      
  <div
    class="handle handle-nw"
  />
  
      
  <div
    class="handle handle-ne"
  />
  
      
  <div
    class="handle handle-sw"
  />
  
      
  <div
    class="handle handle-se"
  />
  
    
</div>
`;

exports[`Ui should draw the UI: snapshot-draw-ui2 1`] = `
<div
  class="box not-selected selectable draggable resizeable-nw resizeable-ne resizeable-sw resizeable-se isDropZone"
  style="position: absolute; top: 10000px; left: 10000px; width: 9998px; height: 9998px; border-width: 1px;"
>
  
      
  <div
    class="handle handle-nw"
  />
  
      
  <div
    class="handle handle-ne"
  />
  
      
  <div
    class="handle handle-sw"
  />
  
      
  <div
    class="handle handle-se"
  />
  
    
</div>
`;
